--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "mm-snap build && mm-snap serve",
+    "build": "mm-snap build",
+    "deploy": "npm run build && npm publish"
+  },
   "author": "",
   "license": "ISC",
   "files": [
