--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rise-wallet/aptos-snap",
-  "version": "1.0.2",
-  "description": "The Aptos Snap.",
+  "version": "1.0.3",
+  "description": "Manage Aptos-based tokens and NFTs, swap, stake and connect to Aptos apps with MetaMask.",
   "main": "src/index.js",
   "scripts": {
     "start": "mm-snap build && mm-snap serve",
